@@ -1,5 +1,8 @@
 2008-11-05  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c/37924
+	* gcc.c-torture/execute/pr37924.c: New test.
+
 	PR tree-optimization/37879
 	* gcc.dg/pr37879.c: New test.
 
