@@ -1,5 +1,10 @@
 2008-11-05  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c/37924
+	* combine.c (make_compound_operation): Don't call make_extraction with
+	non-positive length.
+	(simplify_shift_const_1): Canonicalize count even if complement_p.
+
 	PR tree-optimization/37879
 	* predict.c (tree_estimate_probability): Check if last_stmt is
 	non-NULL before dereferencing it.
